@@ -1625,13 +1625,16 @@ sword.updated.field = dc.date.updated
 #
 sword.slug.field = dc.identifier.slug
 
-# the accept packaging properties, along with their associated
+# The accept packaging properties, along with their associated
 # quality values where appropriate.
 #
 # Global settings; these will be used on all DSpace collections
 #
 sword.accept-packaging.METSDSpaceSIP.identifier = http://purl.org/net/sword-types/METSDSpaceSIP
 sword.accept-packaging.METSDSpaceSIP.q = 1.0
+
+# A comma separated list of MIME types that SWORD will accept
+sword.accepts = application/zip
 
 # Collection Specific settings: these will be used on the collections
 # with the given handles
@@ -1723,7 +1726,7 @@ sword.on-behalf-of.enable = true
 plugin.named.org.dspace.sword.SWORDIngester = \
   org.dspace.sword.SWORDMETSIngester = http://purl.org/net/sword-types/METSDSpaceSIP \
   org.dspace.sword.SimpleFileIngester = SimpleFileIngester
-  
+
   
   
   
